<resources>
    <string name="app_name">Nestresuju</string>
    <string name="general_yes">Ano</string>
    <string name="general_no">Ne</string>
    <string name="general_continue">Pokračovat</string>
    <string name="general_next">Další</string>
    <string name="general_save">Uložit</string>
    <string name="general_lets_go">Jdeme na to</string>
    <string name="general_not_now">Teď ne</string>
    <string name="general_finish">Dokončit</string>
    <string name="general_send">Odeslat</string>
    <string name="general_begin">Začít</string>
    <string name="general_back">Zpět</string>
    <string name="general_discard">Zahodit</string>
    <string name="general_try_again">Zkusit znovu</string>
    <string name="general_add">Přidat</string>
    <string name="general_choose">Vybrat</string>
    <string name="general_confirm">Potvrdit</string>
    <string name="general_understand">Rozumím</string>
    <string name="general_date_yesterday">Včera</string>
    <string name="general_date_today">Dnes</string>
    <string name="general_date_tomorrow">Zítra</string>
    <string name="title_home">Nástěnka</string>
    <string name="title_program">Program</string>
    <string name="title_diary">Deníček</string>
    <string name="title_library">Knihovna</string>
    <string name="title_about_app">O aplikaci</string>
    <string name="login_hint_email">E-mail</string>
    <string name="login_hint_password">Heslo</string>
    <string name="login_confirm">Přihlásit se</string>
    <string name="login_error_invalid_credentials">Neplatné jméno nebo heslo</string>
    <string name="login_consent_title">Informovaný souhlas</string>
    <string name="login_consent_text">Kliknutím na tlačítko „Další“ souhlasíte s účastí na výzkumu účinnosti a uživatelské zkušenosti s mobilní aplikací Nestresuju, který je prováděný v rámci diplomové práce Andrey Kretíkové na katedře psychologie na FF UK. Užíváním Nestresuju souhlasíte se zasíláním dat o Vaši aktivitě v této mobilní aplikaci na server, kam mají přístup pouze členové výzkumného týmu. Vaše data budou anonymizována a svůj souhlas s účastí můžete kdykoliv odvolat a deaktivovat svůj uživatelský účet přímo v Nestresuju.</string>
    <string name="login_consent_missing_error">Potvrďte souhlas s účastí na výzkumu pro pokračování do aplikace</string>
    <string name="input_test_title">Vstupní test</string>
    <string name="input_test_intro_headline">První dotazník</string>
    <string name="input_test_intro_1">V rámci výzkumného šetření o účinnosti Nestresuju tě prosíme o vyplnění dvou krátkých dotazníků týkající se tvého prožívaného stresu. Jejich vyplňování ti zabere jen několik minut.</string>
    <string name="input_test_intro_2">První dotazník obsahuje otázky zaměřeny na to, jak ses cítil/a a jak jsi uvažoval/a během posledního měsíce. Označ odpověď vystihující, jak často ses popsaným způsobem cítil/a nebo uvažoval/a. Dotazník obsahuje 10 otázek a vyplněný ho budeš mít do 5 minut.</string>
    <string name="input_test_instructions">Označ odpověď vystihující, jak často ses popsaným způsobem cítil/a nebo uvažoval/a během posledního měsíce.</string>
    <string name="input_test_answer_0">Nikdy</string>
    <string name="input_test_answer_1">Výjimečně</string>
    <string name="input_test_answer_2">Občas</string>
    <string name="input_test_answer_3">Často</string>
    <string name="input_test_answer_4">Velmi často</string>
    <string name="input_test_confirm_dialog_title">Druhý dotazník</string>
    <string name="input_test_confirm_dialog_text">Děkujeme za vyplnění prvního vstupního dotazníku. Nyní se ti zobrazí seznam životních událostí a označ prosím všechny, které se ti za posledních 12 měsíců staly. Vyplňování zabere méně než 5 minut.</string>
    <string name="screening_test_title">Screening</string>
    <string name="screening_test_instructions">Označ prosím všechny životní události, které se ti staly za posledních 12 měsíců.</string>
    <string name="screening_test_confirm_dialog_text">Děkujeme za tvůj čas a tvé odpovědi. Nyní si můžeš prohlédnout Nestresuju v celé své kráse. V sekci Knihovna se můžeš dočíst více o stresu a stress managementu. Do Deníčku si můžeš pravidelně zaznamenávat úroveň svého stresu. V části Program se ti budou postupně otevírat úkoly a výzvy, které ti pomohou zvládat tvůj stres. Tak vzhůru do toho!</string>
    <string name="screening_test_confirm_dialog_button">Přejít do aplikace</string>
    <string name="home_unfinished_program_title">Máš otevřenou další část programu</string>
    <string name="home_unfinished_program_description">Čeká na tebe další část programu, kterou jsi ještě nevyplnil. Tak vzhůru do toho!</string>
    <string name="home_diary_note_title">Přidej si záznam do deníčku</string>
    <string name="home_diary_note_description">Můžeš si zapisovat i jednoduché pozámky, tak jako do papírového deníčku.</string>
    <string name="home_library_title">Přečti si informace o stresu v Knihovně</string>
    <string name="home_library_description">V Knihovně na tebe čeká spousta informací o stresu a jeho zvládání.</string>
    <string name="program_state_open">Otevřeno</string>
    <string name="program_state_opens_at">Otevře se %s</string>
    <string name="program_state_closed">Uzavřeno</string>
    <string name="program_state_closed_complete_previous">Nejdříve splň předchozí část programu</string>
    <string name="program_state_completed">Splněno</string>
    <string name="program_closed_dialog_title">Program je uzavřený</string>
    <string name="program_closed_dialog_text">Program je zatím uzavřený! Pro jeho otevření musíš splnit předchozí části programu a počkat 6 dní od dokončení poslední části.</string>
    <string name="program_empty_error">Před prvním použitím programu se prosím připoj k Internetu.</string>
    <plurals name="program_deadline_format">
        <item quantity="one">Konec celého programu za %d den!</item>
        <item quantity="few">Konec celého programu za %d dny!</item>
        <item quantity="other">Konec celého programu za %d dní!</item>
    </plurals>
    <string name="program_evaluation_title">Program - rekapitulace</string>
    <string name="program_evaluation_instructions">Než se vrhneš na další část programu Nestresuju, ještě vrať k předchozímu úkolu: %s.</string>
    <string name="program_evaluation_question_1">Povedlo se ti splnit tvůj cíl?</string>
    <string name="program_evaluation_question_2">Jak náročné pro tebe bylo splnit cíl?</string>
    <string name="program_evaluation_question_3">Jakou radu bys dal(a) svému kamarádovi nebo kamarádce, kteří by chtěli dosáhnout stejného cíle jako ty?</string>
    <string name="program_evaluation_question_1_answer_1">Ne</string>
    <string name="program_evaluation_question_1_answer_2">Částečně</string>
    <string name="program_evaluation_question_1_answer_3">Ano</string>
    <string name="program_evaluation_question_2_answer_1">Velmi jednoduché</string>
    <string name="program_evaluation_question_2_answer_2">Jednoduché</string>
    <string name="program_evaluation_question_2_answer_3">Náročné</string>
    <string name="program_evaluation_question_2_answer_4">Velmi náročné</string>
    <string name="program_evaluation_submit">Začít další část</string>
    <string name="program_1_title">Stanovování cílů</string>
    <string name="program_1_summary_title">Stanovování cílů - shrnutí</string>
    <string name="program_1_question_1">Čeho přesně chceš dosáhnout? Co k tomu budeš potřebovat? Komu můžeš říct o pomoc?</string>
    <string name="program_1_question_2">Jak poznáš, že se ti povedlo tvůj úkol splnit?</string>
    <string name="program_1_question_3">Na této škále označ, jak moc si myslíš, že je tvůj cíl dosažitelný a že se ti povede ho splnit v následujících 6 dnech? (1 - absolutně nedosažitelný, 10 - naprosto dosažitelný)</string>
    <string name="program_1_question_3_warning">Dobře definovaný cíl, který ti pomůže kontrolovat úroveň tvého stresu musí být reálně dosažitelný. Zamysli si, jak by šlo tvůj cíl pozměnit, aby si ho dokázal(a) splnit nebo si zkus vymyslet jiný cíl.</string>
    <string name="program_1_question_4">Co ti splnění úkolu přinese? Proč má pro tebe tento cíl význam a smysl?</string>
    <string name="program_1_question_5">Do kdy si myslíš, že se ti povede tvůj cíl splnit?</string>
    <string name="program_1_question_hint">Zadej odpověď</string>
    <string name="program_1_overview_goal_title">1. Cíl</string>
    <string name="program_1_overview_completion_title">2. Splnění</string>
    <string name="program_1_overview_satisfiability_title">3. Splnitelnost</string>
    <string name="program_1_overview_meaning_title">4. Význam</string>
    <string name="program_1_overview_deadline_title">5. Do kdy</string>
    <string name="program_1_overview_summary_title">6. Shrnutí cíle</string>
    <string name="program_1_overview_summarized_goal_instructions">Toto jsou tvé odpovědi na otázky ohledně tvého cíle. Nyní se pokus svůj cíl formulovat jasně a krátce. Nadefinuj si jej za použití jen několika slov. V jednoduchosti je krása!</string>
    <string name="program_1_submitted_dialog_text">Gratulujeme! Právě sis stanovil(a) svůj cíl do následujícího týdne: %s. Držíme palce s jeho plněním. Za 6 dní se ti otevře další část programu Nestresuju! Mezi tím nezapomínej zapisovat svou úroveň stresu do Deníku anebo si něco přečíst o stresu a jeho zvládání v Knihovně.</string>
    <string name="program_2_title">Relaxace</string>
    <string name="program_2_intro_1">A nyní už tě čeká nová část programu Nestresuju, která je zaměřená na relaxaci. Když se nám začnou hromadit starosti a povinnosti, je jednoduché se jimi nechat strhnout a neustále na ně myslet. Takové ustavičné prožívání stresu je velmi vysilující.\n\nUž sis vyzkoušel(a) jak si stanovit dobrý cíl a díky tomu předcházet stresu a lépe kontrolovat stresové události ve svém životě. Nyní budeš pracovat na své schopnosti relaxace, která ti dopomůže lépe orientovat svou pozornost na své emoce a díky tomu je lépe zvládat. Zvýšení povědomí o vlastních emocích usnadňuje jejich lepší zpracování a může dokonce snížit negativní emoční reakce spojované se stresem.\n\nSchopnost relaxace ti pomůže se vyrovnávat se stresovými situacemi, kterým nelze předejít nebo je kontrolovat díky dobrému stanovení cíle. Jak taková relaxace vypadá a jak dlouho vlastně trvá?</string>
    <string name="program_3_hours_instructions">Představ si svůj průměrný den, kdy pociťuješ průměrnou dávku stresu. Nejsi ani extrémně vytížený(á), ale ani nejsi naprosto bez zátěže. Vybav si běžný pracovní den a zamysli si nad tím, jak takový den probíhá.</string>
    <string name="program_3_hours_getting_up">V kolik hodin vstáváš?</string>
    <string name="program_3_hours_breakfast">V kolik hodin snídáš?</string>
    <string name="program_3_hours_lunch">V kolik hodin obědváš?</string>
    <string name="program_3_hours_dinner">V kolik hodin se navečeříš?</string>
    <string name="program_3_hours_going_sleep">V kolik hodin si jdeš lehnout?</string>
    <string name="program_3_hours_sleeping">V kolik hodin usneš?</string>
    <string name="program_4_question_answer_1">Naprosto nepravdivé</string>
    <string name="program_4_question_answer_2">Hodně nepravdivé</string>
    <string name="program_4_question_answer_3">Spíš nepravdivé</string>
    <string name="program_4_question_answer_4">Těžko říct</string>
    <string name="program_4_question_answer_5">Spíš pravdivé</string>
    <string name="program_4_question_answer_6">Hodně pravdivé</string>
    <string name="program_4_question_answer_7">Naprosto pravdivé</string>
    <string name="diary_input_title">Jak moc jsi dnes ve stresu?</string>
    <string name="diary_stress_level_1">Extrémně</string>
    <string name="diary_stress_level_2">Hodně</string>
    <string name="diary_stress_level_3">Málo</string>
    <string name="diary_stress_level_4">Vůbec</string>
</resources>