<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_program"
        android:icon="@drawable/ic_nav_program"
        android:title="@string/title_program" />

    <item
        android:id="@+id/navigation_diary"
        android:icon="@drawable/ic_nav_note"
        android:title="@string/title_diary" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_nav_library"
        android:title="@string/title_library" />

    <item
        android:id="@+id/navigation_about_app"
        android:icon="@drawable/ic_nav_about_app"
        android:title="@string/title_about_app" />

</menu>
