<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="cz.nestresuju.screens.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_program"
        android:name="cz.nestresuju.screens.program.ProgramFragment"
        android:label="@string/title_program"
        tools:layout="@layout/fragment_program" />

    <fragment
        android:id="@+id/navigation_diary"
        android:name="cz.nestresuju.screens.diary.DiaryFragment"
        android:label="@string/title_diary"
        tools:layout="@layout/fragment_diary" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="cz.nestresuju.screens.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_about_app"
        android:name="cz.nestresuju.screens.about.AboutAppFragment"
        android:label="@string/title_about_app"
        tools:layout="@layout/fragment_about" />
</navigation>
