<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_question"
        style="@style/TextAppearance.Headline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/radio_group_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_btn_answer_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="-6dp"
            android:text="@string/program_4_question_answer_1" />

        <RadioButton
            android:id="@+id/radio_btn_answer_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="-6dp"
            android:text="@string/program_4_question_answer_2" />

        <RadioButton
            android:id="@+id/radio_btn_answer_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="-6dp"
            android:text="@string/program_4_question_answer_3" />

        <RadioButton
            android:id="@+id/radio_btn_answer_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="-6dp"
            android:text="@string/program_4_question_answer_4" />

        <RadioButton
            android:id="@+id/radio_btn_answer_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="-6dp"
            android:text="@string/program_4_question_answer_5" />

        <RadioButton
            android:id="@+id/radio_btn_answer_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="-6dp"
            android:text="@string/program_4_question_answer_6" />

        <RadioButton
            android:id="@+id/radio_btn_answer_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="-6dp"
            android:text="@string/program_4_question_answer_7" />

    </RadioGroup>

</LinearLayout>