<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_title"
            style="@style/TextAppearance.Headline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/diary_input_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title">

            <cz.nestresuju.views.diary.DiaryStressLevelView
                android:id="@+id/smiley_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/ic_diary_smiley_1"
                app:text="@string/diary_stress_level_1" />

            <cz.nestresuju.views.diary.DiaryStressLevelView
                android:id="@+id/smiley_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/ic_diary_smiley_2"
                app:text="@string/diary_stress_level_2" />

            <cz.nestresuju.views.diary.DiaryStressLevelView
                android:id="@+id/smiley_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/ic_diary_smiley_3"
                app:text="@string/diary_stress_level_3" />

            <cz.nestresuju.views.diary.DiaryStressLevelView
                android:id="@+id/smiley_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/ic_diary_smiley_4"
                app:text="@string/diary_stress_level_4" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>