<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="16dp">

        <ProgressBar
            android:id="@+id/progress"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_instructions"
            style="@style/TextAppearance.PrimaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/program_3_hours_instructions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress" />

        <cz.nestresuju.views.program.third.ProgramThirdHoursChooserView
            android:id="@+id/chooser_getting_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_instructions"
            app:txt="@string/program_3_hours_getting_up" />

        <cz.nestresuju.views.program.third.ProgramThirdHoursChooserView
            android:id="@+id/chooser_breakfast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chooser_getting_up"
            app:txt="@string/program_3_hours_breakfast" />

        <cz.nestresuju.views.program.third.ProgramThirdHoursChooserView
            android:id="@+id/chooser_lunch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chooser_breakfast"
            app:txt="@string/program_3_hours_lunch" />

        <cz.nestresuju.views.program.third.ProgramThirdHoursChooserView
            android:id="@+id/chooser_dinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chooser_lunch"
            app:txt="@string/program_3_hours_dinner" />

        <cz.nestresuju.views.program.third.ProgramThirdHoursChooserView
            android:id="@+id/chooser_going_sleep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chooser_dinner"
            app:txt="@string/program_3_hours_going_sleep" />

        <cz.nestresuju.views.program.third.ProgramThirdHoursChooserView
            android:id="@+id/chooser_sleeping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chooser_going_sleep"
            app:txt="@string/program_3_hours_sleeping" />

        <Space
            android:id="@+id/spacer"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btn_continue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chooser_sleeping" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            style="@style/PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/general_continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spacer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>